<resources>
    <string name="guide_samsung_legal_for_na">"By tapping Next or otherwise using the phone, you agree to Samsung's terms and conditions."</string>
    <string name="intent_ssw_terms_and_condition">terms_and_condition;class;default_extra;com.sec.android.app.SecSetupWizard/com.sec.android.app.SecSetupWizard.TermsAndConditionActivity</string>
    <string name="intent_ssw_reactivation_lock_setup">reactivation_lock_setup;class;default_extra;com.sec.android.app.SecSetupWizard/com.sec.android.app.SecSetupWizard.ReActivationLockActivity</string>
    <string name="error_log_yes">Yes</string>
    <string name="error_log_no">No thanks</string>
    <string name="error_log_collection">"You agree to provide Samsung the error log data from any Software Update failure your device experiences. This will assist Samsung to improve and enhance Samsung's Software Update process and ultimately help you keep your device properly updated."</string>
    <string name="error_log_collection_k">"CONSENT TO PROVIDE DIAGNOSTIC AND USAGE DATA

Samsung would like your help in improving the quality and performance of its products and services. Samsung and its affiliates may collect diagnostic and usage data from your device for service improvement and statistical purposes, and also to track and address diagnostic events such as unexpected shutdowns and system errors. Diagnostic and usage collection may include usage information on how you use applications, log information on errors, and details on your use of applications (its specific function, frequency of use, memory/battery usage). All diagnostic and usage data will be collected and used in an aggregate manner only in a form that does not personally identify you or your device, and stored for 7 months separately from any other data we may collect. Since Samsung servers are located all over the world, the data we collect may be stored at servers located outside your country. You may choose not to provide us with any diagnostic and usage data, and such decision will not impact the functionality or operation of your device in any way. You may also choose to disable the collection of your diagnostic and usage information at any time via Settings. By clicking on the “Yes” button below, you hereby agree to the collection, use, storage, sharing and disclosure by Samsung and its affiliates of diagnostic and usage data from your device for the purposes set out above and in accordance with Samsungs privacy policy."</string>
    <string name="error_log_collection_k_serviceinfo">"CONSENT TO PROVIDE DIAGNOSTIC AND USAGE DATA

Samsung Electronics Co., Ltd. and its affiliates (”Samsung”) would like your help in improving the quality and performance of its products and services. Your device includes diagnostic software that may, with your consent, automatically collect diagnostic and usage data from your device. Diagnostic software may send this data to Samsung for statistical analysis in order to improve product and service quality, and track and address unexpected shutdowns or system errors. Diagnostic and usage data collected by Samsung may include information on how you use your device or information about network providers (including connection status, charging status, setting status (such as display and power settings), etc.) and how you use your applications (including frequency and duration of use, setting status, memory and battery usage, log data, and where the Location functionality is activated on your device, location data such as information about applicable base stations, etc.). Since Samsung has servers located all over the world, the data we collect may be stored outside your country of residence, including countries where the data protection laws may not be as comprehensive. By agreeing to provide us with this data, you expressly consent to this. All diagnostic and usage data collected for this purpose will be aggregated in a manner that does not personally identify you or your device, and is retained only as long as necessary for this analysis. You may choose not to provide us with diagnostic and usage data, and such decision will not impact the functionality or operation of your device in any way. You may choose to disable this software at any time, through Settings on your device. By tapping on the Yes button below, you hereby agree to (i) the automatic transmit of diagnostic and usage data and (ii) the collection, use, storage, sharing and disclosure by Samsung of diagnostic and usage data from your device for the purposes set out above."</string>
    <string name="validation_email">Checking samsung account...</string>
    <string name="continue_for_a11y">To enable Accessibility mode, continue holding the screen with two fingers until you hear a beep.</string>
    <string name="canceled_a11y">Accessibility mode not enabled.</string>
    <string name="enabled_a11y">Accessibility mode enabled.</string>
    <string name="terms_confirm">I understand and agree to the terms and conditions above.</string>
    <string name="terms_title">EULA &amp; Diagnostic Data</string>
    <string name="terms_title_upgrade">End User Licence Agreement</string>
    <string name="settings_license_activity_loading">Loading…</string>
    <string name="settings_license_activity_unavailable">Error occurred while loading</string>
    <string name="thank_you">Thank you!</string>
    <string name="data_connect_title">Data network</string>
    <string name="data_connection_text">Many applications, widgets, and services on your device, or that you access through your device, require an Internet connection. If Wi-Fi is not turned on, the device will connect to your mobile network, which may result in additional charges depending on your payment plan.</string>
    <string name="reactivation_lock_title">Reactivation lock</string>
    <string name="reactivation_text">"Use your Samsung account to stop other people from reactivating your device after it has been reset.
Prior to warranty repair referral, the reactivation lock must be turned off. Please remember your Samsung account information to reactivate your device when it is locked, without it, the use of your device and warranty repair referral may be limited .

To turn off this feature, goto Settings > Security."</string>
    <string name="reactivation_lock_desc">Protect your device in case it is lost or stolen by stopping other people from reactivating your device after it has been reset. You need a Samsung account to use this service.</string>
    <string name="reactivation_lock_desc2">Before you request a repair under the warranty, the reactivation lock must be disabled. Remember your Samsung account information so you can reactivate your device when it is locked. To disable the reactivation lock, go to Settings > Security.</string>
    <string name="reactivatio_check_text">Enable the reactivation lock</string>
    <string name="device_name_title">Device name</string>
    <string name="device_name_warning">Enter device name</string>
    <string name="device_name_desc">Enter a device name to easily identify your device when using Bluetooth, Wi-Fi Direct, or tethering.</string>
    <string name="device_name_desc_wifi_only">Enter a device name so you can easily identify your device when using Bluetooth and Wi-Fi Direct.</string>
    <string name="key_feature">Browse key features</string>
    <string name="extra_prefs_set_back_text" />
    <string name="actionId">walled_garden</string>
    <string name="scriptUri">android.resource://com.google.android.setupwizard/xml/wizard_script</string>
    <string name="theme">material_light</string>
    <string name="app_name">Samsung setup wizard</string>
    <string name="welcome_start_msg">Welcome!</string>
    <string name="key_feature_button">Learn more</string>
    <string name="tap_to_learn_more">Tap to learn more.</string>
    <string name="setup_complete_message">Device is set up and ready to use</string>
    <string name="select_language">Select language</string>
    <string name="start">Start</string>
    <string name="sim_missing_title">Insert SIM card</string>
    <string name="sim_missing_text">"Power off your device and insert your SIM card into the SIM card slot. If you prefer to skip this step now, be sure to insert your SIM card later. Until you do, most of your device's features will not work."</string>
    <string name="location_sharing_title">Use Google location</string>
    <string name="date_time_title">Time and Timezone</string>
    <string name="location_sharing_message">Google location service uses data from sources such as Wi-Fi and mobile networks to help apps to determine your approximate location, even when GPS is not available</string>
    <string name="yes_agree">Allow Google location services to collect anonymous location data. This will occur even when no applications are running</string>
    <string name="yes_agree_use_location">Use My Location for Google search results and other Google services</string>
    <string name="opt_set_title">Optional setting</string>
    <string name="opt_set_msg">"Easy mode helps you to use your device more easily with the easy widgets feature and the ability to customise the font size
Tap the easy mode tickbox to enable"</string>
    <string name="easy_btn_text">Enable easy mode setup?</string>
    <string name="try_again_button_label">Try again</string>
    <string name="skip_button_label">Skip</string>
    <string name="next_button_label">Next</string>
    <string name="next_button_disable">Disabled</string>
    <string name="button_tts">Button</string>
    <string name="previous_button_label">Previous</string>
    <string name="restart_button_label">Restart</string>
    <string name="finish_button_label">Finish</string>
    <string name="uim_missing_title">No UIM card in device</string>
    <string name="uim_missing_text">"Turn off your device, remove the battery, and carefully insert your UIM card with the gold contact side down. The cut-off corner should end up farthest away from the battery
If you prefer to skip now, be sure to insert your UIM card later. Until you do, most of your device’s features will not work"</string>
    <string name="sim_uim_missing_title">No UIM/SIM card inserted</string>
    <string name="sim_uim_missing_text">"Turn off your device and carefully insert your UIM/SIM card into the UIM/SIM card slot. If you prefer to skip this step now, make sure you insert your UIM/SIM card later. Until you insert it, most of your device's features will not work"</string>
    <string name="activation_progress_title">Activate device</string>
    <string name="activation_progress_text">Activating your device. This can take a few minutes. Please wait...</string>
    <string name="activation_succ_title">Device activated</string>
    <string name="activation_succ_text">Your device needs to restart to be fully activated.</string>
    <string name="device_activated_text">Your device is already activated.</string>
    <string name="activation_fail_title">Fail to activate device</string>
    <string name="accessibility">Accessibility</string>
    <string name="accessibility_description">Tap Accessibility below to change the accessibility settings.</string>
    <string name="home_sync_thankyou">Thank you!</string>
    <string name="home_sync_display_aspect_ratio">Aspect ratio</string>
    <string name="home_sync_display_aspect_ratio_msg">For a better picture display, manually set the aspect ratio of your TV using your TV remote control</string>
    <string name="welcome_desc_for_mum">"Your user area has been added to this tablet.
After you have finished setting up, you can use the current applications and install new ones.

Important:

- The tablet's owner can uninstall the apps you have installed and delete your user area.
- Other users can allow changes to application permissions on your behalf.
- As with any computer, you should only share this tablet with people you trust."</string>
</resources>