<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/language_screen" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/eula_title" android:background="#ff026c86" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/title_area_top_margin">
        <TextView android:ellipsize="end" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/terms_title" android:maxLines="1" style="@style/eula_title_area" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="416.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="17.0dip" android:layout_marginRight="16.0dip">
        <ScrollView android:orientation="vertical" android:id="@id/terms_scroll" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:scrollbarStyle="outsideInset" android:gravity="start" android:id="@id/terms_msg" android:scrollbars="vertical" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:editable="false" android:importantForAccessibility="no" style="@style/description_area" />
        </ScrollView>
    </LinearLayout>
    <CheckBox android:textSize="17.0dip" android:textColor="@color/desc_text" android:ellipsize="end" android:gravity="start|center" android:id="@id/terms_confirm" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="80.0dip" android:text="@string/terms_confirm" android:maxLines="3" android:paddingStart="8.0dip" android:layout_marginStart="21.0dip" android:layout_marginEnd="25.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/err_collection" android:layout_width="fill_parent" android:layout_height="158.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
        <ScrollView android:orientation="vertical" android:id="@id/terms_scroll2" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:scrollbarStyle="outsideInset" android:gravity="start" android:id="@id/terms_msg2" android:scrollbars="vertical" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/error_log_collection" android:editable="false" android:importantForAccessibility="no" style="@style/description_area" />
        </ScrollView>
    </LinearLayout>
    <RadioGroup android:orientation="vertical" android:id="@id/menu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkedButton="@id/err_collection_confirm" android:paddingStart="21.0dip" android:paddingEnd="25.0dip">
        <RadioButton android:textSize="17.0dip" android:textColor="@color/desc_text" android:gravity="start|center" android:id="@id/err_collection_confirm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="58.0dip" android:text="@string/error_log_yes" android:paddingStart="8.0dip" />
        <RadioButton android:textSize="17.0dip" android:textColor="@color/desc_text" android:gravity="start|center" android:id="@id/err_collection_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="58.0dip" android:text="@string/error_log_no" android:paddingStart="8.0dip" />
    </RadioGroup>
</LinearLayout>