<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/setupwizard_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/title_text" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/title_area_top_margin" style="@style/title_area" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/language_screen_side_padding" android:paddingRight="@dimen/language_screen_side_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:id="@id/setup_wizard_logo" android:paddingTop="@dimen/setup_wizard_logo_paddingTop" android:paddingBottom="@dimen/setup_wizard_logo_paddingBottom_for_mum" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/setupwizard_logo" android:scaleType="fitCenter" android:adjustViewBounds="true" />
        <TextView android:gravity="center" android:id="@id/start_msg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_start_msg" style="@style/sub_title_area" />
        <TextView android:gravity="left" android:id="@id/welcom_desc" android:paddingTop="@dimen/welcome_desc_paddingTop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_desc_for_mum" style="@style/description_area" />
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:paddingBottom="@dimen/accessibility_btn_bottom_margin_for_mum" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:gravity="left" android:id="@id/accessibility_notice" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/accessibility_description" style="@style/description_area" />
            <Button android:layout_gravity="center" android:id="@id/accessibility_btn" android:paddingBottom="3.0dip" android:layout_width="@dimen/accessibility_btn_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/accessibility_btn_top_margin_for_mum" android:minHeight="@dimen/accessibility_btn_height" android:text="@string/accessibility" style="@style/button_style" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:background="@drawable/setupwizard_bottom_button_bg" android:paddingTop="@dimen/bottom_button_area_paddingTop" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_buttons_height">
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:background="@drawable/setupwizard_bottom_button_divider" android:layout_width="@dimen/bottom_button_area_divider_width" android:layout_height="fill_parent" android:layout_marginTop="@dimen/bottom_buttons_area_divider_padding" android:layout_marginBottom="@dimen/bottom_buttons_area_divider_padding" />
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/next_btn_area" android:background="@drawable/action_bar_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:gravity="center" android:id="@id/next_btn_text" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/bottom_button_text" />
            <ImageView android:gravity="center" android:id="@id/next_btn_arrow" android:paddingLeft="@dimen/next_arrow_paddingLeft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/setupwizard_next_arrow" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>