<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root_layout_spc" android:background="@drawable/setupwizard_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/setup_wizard_logo_spc" android:paddingTop="@dimen/APKTOOL_DUMMY_c2" android:paddingBottom="@dimen/setup_wizard_logo_paddingBottom" android:layout_width="@dimen/homesync_logo_width" android:layout_height="@dimen/homesync_logo_height" android:src="@drawable/APKTOOL_DUMMY_25" android:scaleType="fitCenter" android:adjustViewBounds="true" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingTop="@dimen/APKTOOL_DUMMY_c0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.55">
            <ImageView android:id="@id/setup_wizard_logo_spc_1" android:paddingBottom="@dimen/setup_wizard_logo_paddingBottom" android:layout_width="@dimen/homesync_setup_width" android:layout_height="@dimen/homesync_setup_height" android:src="@drawable/APKTOOL_DUMMY_35" android:scaleType="fitCenter" android:adjustViewBounds="true" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.45">
            <TextView android:gravity="left" android:id="@id/start_msg_spc" android:paddingBottom="@dimen/APKTOOL_DUMMY_bf" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/home_sync_thankyou" style="@style/sub_title_area_spc" />
            <TextView android:gravity="left" android:paddingBottom="@dimen/APKTOOL_DUMMY_be" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/home_sync_display_aspect_ratio" style="@style/sub_title_area_spc" />
            <TextView android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/home_sync_display_aspect_ratio_msg" style="@style/description_area_spc" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:background="@drawable/APKTOOL_DUMMY_3e" android:paddingTop="@dimen/bottom_button_area_paddingTop" android:layout_width="fill_parent" android:layout_height="@dimen/APKTOOL_DUMMY_c7">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/previous_btn" android:background="@drawable/APKTOOL_DUMMY_a" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:gravity="center" android:id="@id/previous_btn_img" android:paddingRight="@dimen/next_arrow_paddingLeft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/APKTOOL_DUMMY_c" />
            <TextView android:gravity="center" android:id="@id/previous_btn_text" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/bottom_button_text_spc" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/next_btn_area_spc" android:background="@drawable/APKTOOL_DUMMY_a" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:gravity="center" android:id="@id/next_btn_text_spc" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/bottom_button_text_spc" />
            <ImageView android:gravity="center" android:id="@id/next_btn_arrow_spc" android:paddingLeft="@dimen/next_arrow_paddingLeft" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/APKTOOL_DUMMY_b" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>